# GrenAgent

./: .gitattributes  .gitignore  README.md
.cursor/rules/: mcp-messenger-Pi.mdc
.github/workflows/: release.yml
cli/: package-lock.json  package.json  pnpm-lock.yaml
cli/src/: extension-profile.test.ts  extension-profile.ts  main.ts  probe-models.test.ts  probe-models.ts
docs/: architecture.md  development.md
embedding/: README.md  app.ts  build.mjs  package-lock.json  package.json  sea-banner.js  sea-config.json  tsconfig.json  vector-service.ts
extensions/: README.md  index.ts  package-lock.json  package.json
extensions/_shared/: ask.ts  embedding.test.ts  embedding.ts  fs-walk.ts  jsonrpc-stdio.test.ts  jsonrpc-stdio.ts  keyword-score.ts  llm.ts  oneshot.test.ts  oneshot.ts  provider-endpoint.test.ts  provider-endpoint.ts  runtime-config.test.ts  runtime-config.ts  sandbox-gate.test.ts  sandbox-gate.ts  seed-agents.test.ts  seed-agents.ts  summarize.ts  tool-groups.test.ts  tool-groups.ts  transcript.ts  vector-store.test.ts  vector-store.ts
extensions/after-tool-feedback/: index.ts  render.test.ts  render.ts  select.test.ts  select.ts
extensions/agent-mode/: index.ts  modes.test.ts  modes.ts  package.json  plan.test.ts  plan.ts  prompts.ts  (+3 more)
tauri-agent/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  preview.html  vite.config.ts  vitest.config.ts
tauri-agent/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri-agent/src-tauri/src/: lib.rs
tauri-agent/src-tauri/src/commands/: agent.rs  checkpoint.rs  code_intel.rs  files.rs  git.rs  knowledge.rs  mcp_policy.rs  memory.rs  mod.rs  providers.rs  sessions.rs  shell.rs  skills.rs  subagent.rs  usage.rs  workspaces.rs
tauri-agent/src-tauri/src/pi/: client.rs  diag.rs  mod.rs  sidecar.rs
tauri-agent/src-tauri/src/state/: app_state.rs
(+639 files in other folders)
