[package]
name = "tauri-agent"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
dirs = "5"
async-trait = "0.1"
base64 = "0.22"
portable-pty = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
# 仅启用 deflate（最常见的 skill zip 压缩），关闭 bzip2/zstd 以免引入 C 依赖、构建更稳。
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }

# Declare src-tauri as its own workspace root so tauri-build / cargo_toml does not
# walk up into parent directories (avoids PermissionDenied on restricted/OneDrive paths).
[workspace]

